# dispatch

./: .browserslistrc  .gitignore  .mcp.json  .nvim.lua  .oxfmtrc.json  .oxlintrc.json  .prototools  .stylelintignore  AGENTS.md  README.md  bunfig.toml  package.json  pnpm-lock.yaml  stylelint.config.js  tsconfig.base.json  tsconfig.json  tsconfig.options.json  tsconfig.oxlint.json
.agents/skills/browser-automation/: SKILL.md
.agents/skills/git-commits/: SKILL.md
.agents/skills/github-actions-ci/: SKILL.md
.agents/skills/performance/: SKILL.md
.agents/skills/testing-and-verification/: SKILL.md
.agents/skills/tooling-and-dependencies/: SKILL.md
.agents/skills/typescript-monorepo/: SKILL.md
.agents/skills/worktrees-and-dev-servers/: SKILL.md
.dispatch/: config.yml
.dispatch/tasks/: e-ec195e-ship-dispatch-v0-1.md  t-28f2f1-headless-dispatcher-cli-run-plan-epic-re.md  t-5dfaf6-real-agent-end-to-end-validation-of-the.md  t-878200-first-public-release.md  t-8fc90d-get-written-licensing-grant-from-relay-s.md  t-a2c062-decide-the-product-name.md  t-dbb41b-confirm-acceptedits-as-default-permissio.md  t-df3a1e-desktop-identity-dispatch-first-ui-relay.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit
apps/desktop/: README.md  components.json  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/entitlements/: sidecar.plist
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 0001_init.sql  0002_file_diff_content.sql  0003_kanban.sql  0004_session_title.sql  0005_plan.sql  0006_card_pending_launch.sql
apps/desktop/src-tauri/resources/: attach_session.applescript  pricing.json
apps/desktop/src-tauri/src/: activity.rs  commands.rs  lib.rs  registry.rs  sidecar.rs  tags.rs  terminal.rs
apps/desktop/src-tauri/src/cost/: mod.rs  pricing.rs
apps/desktop/src-tauri/src/db/: mod.rs  queries.rs
apps/desktop/src-tauri/src/parser/: claude_jsonl.rs  codex_jsonl.rs  cursor_jsonl.rs  gemini_log.rs  mod.rs  record.rs  session_builder.rs  transcript.rs
apps/desktop/src-tauri/src/summarize/: mod.rs  prompts.rs
apps/desktop/src-tauri/src/watcher/: mod.rs  tail.rs
apps/desktop/src-tauri/tests/fixtures/: malformed_line.jsonl  session_basic.jsonl
docs/: RELEASE-CHECKLIST.md
docs/research/: 2026-07-13-landscape-research.md
scripts/: README.md  build-sidecar.ts  precommit-tsc.ts  ws.ts
(+187 files in other folders)
