[package]
name = "dispatch-desktop"
version = "0.1.0"
description = "Dispatch desktop shell (Tauri observability plane, vendored from Relay)"
authors = ["Dispatch"]
license = "Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
notify = "8"
notify-debouncer-mini = "0.6"
rusqlite = { version = "0.32", features = ["bundled"] }
rusqlite_migration = "1.3"
reqwest = { version = "0.12", features = [
  "json",
  "rustls-tls",
], default-features = false }
tokio = { version = "1", features = [
  "rt-multi-thread",
  "time",
  "fs",
  "macros",
] }
dirs = "5"
similar = "2"
chrono = "0.4"
thiserror = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
